--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-responsive-carousel": "^3.2.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.35.2",
     "web-vitals": "^1.1.2"
   },
