--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-responsive-carousel": "^3.2.19",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.2",
     "sass": "^1.43.4",
     "web-vitals": "^1.1.2"
@@ -43,7 +43,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^6.0.1",
-    "sass-loader": "^10.2.0"
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.0"
   }
 }
