--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "node-sass": "npm:sass@^1.49.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-responsive-carousel": "^3.2.19",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-transition-group": "^4.4.2",
-    "sass": "^1.43.4",
+    "sass": "^1.57.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -43,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^7.0.1",
     "sass-loader": "^13.0.0"
   }
 }
