--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.3",
     "react-transition-group": "^4.4.2",
-    "sass": "^1.57.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -42,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "sass-loader": "^13.0.0"
-}
+    "sass": "^1.77.8",
+    "sass-loader": "^13.3.3",
+    "webpack": "^5.93.0"
+  }
 }
