--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.3",
     "react-transition-group": "^4.4.2",
+    "webpack": "4.28.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
